--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
   
 <body>
+  
   <div>
     <h1>Pete Hall</h1>
-    <p>Summary statement goes here</p>
+    <p>pete.mack.hall@gmail.com</p> <!-- Add in the mailto link -->
+    <p>815-978-0519</p>
   </div>
   
   <div class ="exp-header">
@@ -21,33 +23,74 @@
     <h4>BetterYou</h4>
     <h5>Business Development Representative</h5>
     <h6>May 2021 - Present</h6>
-    
+    <p>BetterYou is an app backed by behavior design that helps people find more time in the day for their health. Through the use of logging progress automatically and providing tailored nudges, users can mindfully spend time achieving a variety of wellness goals.</p>
     <ul>
-      <li>Awesome information here!</li>
-      <li>More awesomeness</li>
-      <li>Tell us what you accomplished</li>
+      <li>Hired as employee #11 during the close of the company’s $2.25 million venture-lead seed round</li>
+      <li>Generate leads, perform and experiment with outbound sales campaigns to Higher Education institutions and Mid-Market to Enterprise level organizations</li>
+      <li>The #1 top performing BDR (out of 7) at the company with 63 total demos booked, accounting for 36% of the total number of demos booked as a team since starting
+Company record for number of demos booked in a day (5), week (6), month (18), and quarter (32)</li>
+			<li>Completed a total of 5,130 dials with an 8% connect rate resulting in 45% of personal demos booked</li>
+			<li>Achieving a 34% open rate on email outreach resulting in 55% of personal demos booked</li>
+			<li>Booked demos and started relationships at places like Walmart, Aon, Gallagher, Carvana, McKinsey Company, Syracuse University, and Texas A&amp;M</li>
     </ul>
   </div>
   
   <div>
-    <h4>E and I Macalester College</h4>
+    <h4>Department of Entrepreneurship &amp; Innovation, Macalester College</h4>
     <h5>Administrative Coordinator</h5>
-    <h6>dates - dates</h6>
-    
+    <h6>January 2019 - April 2021</h6>
+		<p>Entrepreneurship at Macalester works with students and the broader Macalester community to nurture ideas and fuel innovation to bring about change</p>
     <ul>
-      <li>Awesome information here!</li>
-      <li>More awesomeness</li>
-      <li>Tell us what you accomplished</li>
+      <li>Coordinated the logistics for all aspects of 3 yearly cohort-based programs and 3 yearly funds - including promotions, info sessions, applications, selection process, program acceptance, on-boarding, programming, surveys, and program wrap-up</li>
+      <li>Lead event planning and logistics for E&I events, marquee "hackathon", and Idea Showcase</li>
+      <li>Maintained and analyzed program data, implemented process improvements, and worked with confidential information</li>
+			<li>Supervised 20 student employees and assisted in Maker Space programming</li>
+			<li>Regularly updated website content with WordPress and HTML</li>
+			<li>Managed and reconciled budgets</li>
     </ul>
   </div>
+	
+	<div>
+		<h4>Student Employment, Macalester College</h4>
+		<h5>Interim Program Coordinator</h5>
+		<h6>October 2018 - January 2019</h6>
+		<p>Employing nearly 1,600 students, Macalester's Student Employment Program exists to provide employment opportunities that offer students both financial assistance and professional development.</p>
+		<ul>
+			<li>Hired after graduation as a full-time staff member to temporarily lead day-to-day operations of a $3M budget Student Employment program</li>
+			<li>Facilitated employee status changes for student employees, including new hire paperwork and ERP maintenance</li>
+			<li>Built relationships and partnered with business functions throughout the college to solve problems</li>
+			<li>Trained and supported supervisors on Student Employment processes and policies</li>
+			<li>Continued long-term strategy of connecting the Student Employment program to career readiness</li>
+		</ul>
+	</div>
+	
+	<div>
+		<h4>Employment Services, Macalester College</h4>
+		<h5>HR Office Assistant</h5>
+		<h6>June 2017 - May 2018</h6>
+		<p>Employment Services is committed to attracting, selecting, retaining and developing a diverse and inclusive workforce that maintains the high standards of the College.</p>
+		<ul>
+			<li>Executed an internal audit of roughly 3,000 Form I-9's, monitored student employment awards, and implemented student employee status changes</li>
+			<li>Supported the Student Employment Program, creating Standard Operating Procedure documents to support internal processes</li>
+			<li>Completed tasks and projects for a variety of areas in HR including benefits, compensation, HRIS, and talent acquisition.</li>
+		</ul>
+	</div>
   
   <div class="exp-header">
     <h3>Education</h3>
   </div>
   
   <div>
-    <h5>BS Neuroscience Studies</h5>
-    <h6>Macalester College 2018</h6> 
+		<h4>Macalester College</h4>
+    <h5>Bachelor of Arts in Neuroscience Studies (Psychology Emphasis)</h5>
+    <h6>September 2014 - May 2018</h6> 
+		<p>Macalester College is a top ranked liberal arts college located in St. Paul, MN. With special emphasis on internationalism, multiculturalism, and service to society, a Macalester education prepares students to thrive in a globally connected world.</p>
+		<ul>
+			<li>Independently researched how the use of environmental and social enrichment affected the impaired memory of rats in order to investigate possible treatment for Alzheimer’s Disease</li>
+			<li>NCAA Division III Men’s Soccer - 4 years</li>
+			<li>WMCN 91.7 Radio DJ</li>
+			<li>Relevant coursework: Core Concepts in Computer Science, Introduction to Statistics, Introduction to Artificial Intelligence, Introduction to Entrepreneurship</li>
+		</ul>
   </div>
 
 </body>
