--- a/index.html
+++ b/index.html
@@ -9,21 +9,24 @@
   
 <body>
   
-  <div>
-    <h1>Pete Hall</h1>
+  <div class="name-block">
+		<h1>Pete Hall</h1>
+	</div>
+	
+	<div class="info-block">
     <p>pete.mack.hall@gmail.com</p> <!-- Add in the mailto link -->
     <p>815-978-0519</p>
   </div>
   
   <div class ="exp-header">
-    <h3>Professional Experience</h3>
+    <h2>Professional Experience</h2>
   </div>
   
   <div>
-    <h4>BetterYou</h4>
-    <h5>Business Development Representative</h5>
-    <h6>May 2021 - Present</h6>
-    <p>BetterYou is an app backed by behavior design that helps people find more time in the day for their health. Through the use of logging progress automatically and providing tailored nudges, users can mindfully spend time achieving a variety of wellness goals.</p>
+    <h3><img src="https://media-exp1.licdn.com/dms/image/C560BAQGCkbFyFWzTcA/company-logo_200_200/0/1545163963799?e=2159024400&v=beta&t=gNFcMIVXlJXhzKxJymGG-ym2ypBZAaGgGO54QJeFXkg" />BetterYou</h3>
+    <h4>Business Development Representative</h5>
+    <h5>May 2021 - Present</h6>
+    <p class="tidbit">BetterYou is an app backed by behavior design that helps people find more time in the day for their health. Through the use of logging progress automatically and providing tailored nudges, users can mindfully spend time achieving a variety of wellness goals.</p>
     <ul>
       <li>Hired as employee #11 during the close of the company’s $2.25 million venture-lead seed round</li>
       <li>Generate leads, perform and experiment with outbound sales campaigns to Higher Education institutions and Mid-Market to Enterprise level organizations</li>
@@ -36,10 +39,10 @@ Company record for number of demos booked in a day (5), week (6), month (18), an
   </div>
   
   <div>
-    <h4>Department of Entrepreneurship &amp; Innovation, Macalester College</h4>
-    <h5>Administrative Coordinator</h5>
-    <h6>January 2019 - April 2021</h6>
-		<p>Entrepreneurship at Macalester works with students and the broader Macalester community to nurture ideas and fuel innovation to bring about change</p>
+    <h3><img class="mac-logo" src="https://athletics.macalester.edu/images/2021/1/4/shield_blue_headshot.jpg"/>Department of Entrepreneurship &amp; Innovation, Macalester College</h3>
+    <h4>Administrative Coordinator</h5>
+    <h5>January 2019 - April 2021</h6>
+		<p class="tidbit">Entrepreneurship at Macalester works with students and the broader Macalester community to nurture ideas and fuel innovation to bring about change</p>
     <ul>
       <li>Coordinated the logistics for all aspects of 3 yearly cohort-based programs and 3 yearly funds - including promotions, info sessions, applications, selection process, program acceptance, on-boarding, programming, surveys, and program wrap-up</li>
       <li>Lead event planning and logistics for E&I events, marquee "hackathon", and Idea Showcase</li>
@@ -51,10 +54,10 @@ Company record for number of demos booked in a day (5), week (6), month (18), an
   </div>
 	
 	<div>
-		<h4>Student Employment, Macalester College</h4>
+		<h3><img class="mac-logo" src="https://athletics.macalester.edu/images/2021/1/4/shield_blue_headshot.jpg"/>Student Employment, Macalester College</h3>
 		<h5>Interim Program Coordinator</h5>
 		<h6>October 2018 - January 2019</h6>
-		<p>Employing nearly 1,600 students, Macalester's Student Employment Program exists to provide employment opportunities that offer students both financial assistance and professional development.</p>
+		<p class="tidbit">Employing nearly 1,600 students, Macalester's Student Employment Program exists to provide employment opportunities that offer students both financial assistance and professional development.</p>
 		<ul>
 			<li>Hired after graduation as a full-time staff member to temporarily lead day-to-day operations of a $3M budget Student Employment program</li>
 			<li>Facilitated employee status changes for student employees, including new hire paperwork and ERP maintenance</li>
@@ -65,9 +68,9 @@ Company record for number of demos booked in a day (5), week (6), month (18), an
 	</div>
 	
 	<div>
-		<h4>Employment Services, Macalester College</h4>
-		<h5>HR Office Assistant</h5>
-		<h6>June 2017 - May 2018</h6>
+		<h3><img class="mac-logo" src="https://athletics.macalester.edu/images/2021/1/4/shield_blue_headshot.jpg"/>Employment Services, Macalester College</h3>
+		<h4>HR Office Assistant</h5>
+		<h5>June 2017 - May 2018</h6>
 		<p>Employment Services is committed to attracting, selecting, retaining and developing a diverse and inclusive workforce that maintains the high standards of the College.</p>
 		<ul>
 			<li>Executed an internal audit of roughly 3,000 Form I-9's, monitored student employment awards, and implemented student employee status changes</li>
@@ -77,14 +80,14 @@ Company record for number of demos booked in a day (5), week (6), month (18), an
 	</div>
   
   <div class="exp-header">
-    <h3>Education</h3>
+    <h2>Education</h2>
   </div>
   
   <div>
-		<h4>Macalester College</h4>
-    <h5>Bachelor of Arts in Neuroscience Studies (Psychology Emphasis)</h5>
-    <h6>September 2014 - May 2018</h6> 
-		<p>Macalester College is a top ranked liberal arts college located in St. Paul, MN. With special emphasis on internationalism, multiculturalism, and service to society, a Macalester education prepares students to thrive in a globally connected world.</p>
+		<h3><img class="mac-logo" src="https://athletics.macalester.edu/images/2021/1/4/shield_blue_headshot.jpg"/>Macalester College</h3>
+    <h4>Bachelor of Arts in Neuroscience Studies (Psychology Emphasis)</h5>
+    <h5>September 2014 - May 2018</h6> 
+		<p class="tidbit">Macalester College is a top ranked liberal arts college located in St. Paul, MN. With special emphasis on internationalism, multiculturalism, and service to society, a Macalester education prepares students to thrive in a globally connected world.</p>
 		<ul>
 			<li>Independently researched how the use of environmental and social enrichment affected the impaired memory of rats in order to investigate possible treatment for Alzheimer’s Disease</li>
 			<li>NCAA Division III Men’s Soccer - 4 years</li>
