--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 	</div>
 	
   <div class ="exp-header">
-    <h2>Professional Experience</h2>
+    <h2>Experience</h2>
   </div>
   
   <div>
-    <h3><img src="https://media-exp1.licdn.com/dms/image/C560BAQGCkbFyFWzTcA/company-logo_200_200/0/1545163963799?e=2159024400&v=beta&t=gNFcMIVXlJXhzKxJymGG-ym2ypBZAaGgGO54QJeFXkg" />BetterYou</h3>
+    <h3><a href="https://www.betteryou.ai/" target="_blank"><img src="https://media-exp1.licdn.com/dms/image/C560BAQGCkbFyFWzTcA/company-logo_200_200/0/1545163963799?e=2159024400&v=beta&t=gNFcMIVXlJXhzKxJymGG-ym2ypBZAaGgGO54QJeFXkg" /></a>BetterYou</h3>
     <h4>Business Development Representative</h5>
     <h5>May 2021 - Present</h6>
     <p class="tidbit">BetterYou is an app backed by behavior design that helps people find more time in the day for their health. Through the use of logging progress automatically and providing tailored nudges, users can mindfully spend time achieving a variety of wellness goals.</p>
@@ -36,7 +36,7 @@ Company record for number of demos booked in a day (5), week (6), month (18), an
   </div>
   
   <div>
-    <h3><img class="mac-logo" src="https://athletics.macalester.edu/images/2021/1/4/shield_blue_headshot.jpg"/>Department of Entrepreneurship &amp; Innovation, Macalester College</h3>
+    <h3><a href="https://www.macalester.edu/entrepreneurship-and-innovation/"><img class="mac-logo" src="https://athletics.macalester.edu/images/2021/1/4/shield_blue_headshot.jpg"/></a>Department of Entrepreneurship &amp; Innovation, Macalester College</h3>
     <h4>Administrative Coordinator</h5>
     <h5>January 2019 - April 2021</h6>
 		<p class="tidbit">Entrepreneurship at Macalester works with students and the broader Macalester community to nurture ideas and fuel innovation to bring about change</p>
@@ -51,7 +51,7 @@ Company record for number of demos booked in a day (5), week (6), month (18), an
   </div>
 	
 	<div>
-		<h3><img class="mac-logo" src="https://athletics.macalester.edu/images/2021/1/4/shield_blue_headshot.jpg"/>Student Employment, Macalester College</h3>
+		<h3><a href="https://www.macalester.edu/employmentservices/studentemployment/" target="_blank"><img class="mac-logo" src="https://athletics.macalester.edu/images/2021/1/4/shield_blue_headshot.jpg"/></a>Student Employment, Macalester College</h3>
 		<h5>Interim Program Coordinator</h5>
 		<h6>October 2018 - January 2019</h6>
 		<p class="tidbit">Employing nearly 1,600 students, Macalester's Student Employment Program exists to provide employment opportunities that offer students both financial assistance and professional development.</p>
@@ -65,7 +65,7 @@ Company record for number of demos booked in a day (5), week (6), month (18), an
 	</div>
 	
 	<div>
-		<h3><img class="mac-logo" src="https://athletics.macalester.edu/images/2021/1/4/shield_blue_headshot.jpg"/>Employment Services, Macalester College</h3>
+		<h3><a href="https://www.macalester.edu/employmentservices/" target="_blank"><img class="mac-logo" src="https://athletics.macalester.edu/images/2021/1/4/shield_blue_headshot.jpg"/></a>Employment Services, Macalester College</h3>
 		<h4>HR Office Assistant</h5>
 		<h5>June 2017 - May 2018</h6>
 		<p>Employment Services is committed to attracting, selecting, retaining and developing a diverse and inclusive workforce that maintains the high standards of the College.</p>
@@ -81,7 +81,7 @@ Company record for number of demos booked in a day (5), week (6), month (18), an
   </div>
   
   <div>
-		<h3><img class="mac-logo" src="https://athletics.macalester.edu/images/2021/1/4/shield_blue_headshot.jpg"/>Macalester College</h3>
+		<h3><a href="https://www.macalester.edu/" target="_blank"><img class="mac-logo" src="https://athletics.macalester.edu/images/2021/1/4/shield_blue_headshot.jpg"/></a>Macalester College</h3>
     <h4>Bachelor of Arts in Neuroscience Studies (Psychology Emphasis)</h5>
     <h5>September 2014 - May 2018</h6> 
 		<p class="tidbit">Macalester College is a top ranked liberal arts college located in St. Paul, MN. With special emphasis on internationalism, multiculturalism, and service to society, a Macalester education prepares students to thrive in a globally connected world.</p>
