--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Company record for number of demos booked in a day (5), week (6), month (18), an
   </div>
   
   <div>
-    <h3><a href="https://www.macalester.edu/entrepreneurship-and-innovation/"><img class="mac-logo" src="https://athletics.macalester.edu/images/2021/1/4/shield_blue_headshot.jpg"/></a>Department of Entrepreneurship &amp; Innovation, Macalester College</h3>
+    <h3><a href="https://www.macalester.edu/entrepreneurship-and-innovation/" target="_blank"><img class="mac-logo" src="https://athletics.macalester.edu/images/2021/1/4/shield_blue_headshot.jpg"/></a>Department of Entrepreneurship &amp; Innovation, Macalester College</h3>
     <h4>Administrative Coordinator</h5>
     <h5>January 2019 - April 2021</h6>
 		<p class="tidbit">Entrepreneurship at Macalester works with students and the broader Macalester community to nurture ideas and fuel innovation to bring about change</p>
