--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   
   <div class="info-block">
 		<h1>Pete Hall</h1>
-		<p>pete.mack.hall@gmail.com</p> <!-- Add in the mailto link -->
+		<p>pete.mack.hall@gmail.com</p>
     <p>815-978-0519</p>
 	</div>
 	
@@ -20,9 +20,9 @@
   </div>
   
   <div>
-    <h3><a href="https://www.betteryou.ai/" target="_blank"><img src="https://media-exp1.licdn.com/dms/image/C560BAQGCkbFyFWzTcA/company-logo_200_200/0/1545163963799?e=2159024400&v=beta&t=gNFcMIVXlJXhzKxJymGG-ym2ypBZAaGgGO54QJeFXkg" /></a>BetterYou</h3>
-    <h4>Business Development Representative</h5>
-    <h5>May 2021 - Present</h6>
+    <h3><a href="https://www.betteryou.ai/" target="_blank"><img class="betteryou-logo" src="https://media-exp1.licdn.com/dms/image/C560BAQGCkbFyFWzTcA/company-logo_200_200/0/1545163963799?e=2159024400&v=beta&t=gNFcMIVXlJXhzKxJymGG-ym2ypBZAaGgGO54QJeFXkg" /></a>BetterYou, St. Paul, MN</h3>
+    <h4>Business Development Representative</h4>
+    <h5>May 2021 - Present</h5>
     <p class="tidbit">BetterYou is an app backed by behavior design that helps people find more time in the day for their health. Through the use of logging progress automatically and providing tailored nudges, users can mindfully spend time achieving a variety of wellness goals.</p>
     <ul>
       <li>Hired as employee #11 during the close of the company’s $2.25 million venture-lead seed round</li>
@@ -37,9 +37,9 @@ Company record for number of demos booked in a day (5), week (6), month (18), an
   
   <div>
     <h3><a href="https://www.macalester.edu/entrepreneurship-and-innovation/" target="_blank"><img class="mac-logo" src="https://athletics.macalester.edu/images/2021/1/4/shield_blue_headshot.jpg"/></a>Department of Entrepreneurship &amp; Innovation, Macalester College</h3>
-    <h4>Administrative Coordinator</h5>
-    <h5>January 2019 - April 2021</h6>
-		<p class="tidbit">Entrepreneurship at Macalester works with students and the broader Macalester community to nurture ideas and fuel innovation to bring about change</p>
+    <h4>Administrative Coordinator</h4>
+    <h5>January 2019 - April 2021</h5>
+		<p class="tidbit">Entrepreneurship at Macalester works with students and the broader Macalester community to nurture ideas and fuel innovation to bring about change.</p>
     <ul>
       <li>Coordinated the logistics for all aspects of 3 yearly cohort-based programs and 3 yearly funds - including promotions, info sessions, applications, selection process, program acceptance, on-boarding, programming, surveys, and program wrap-up</li>
       <li>Lead event planning and logistics for E&I events, marquee "hackathon", and Idea Showcase</li>
@@ -52,8 +52,8 @@ Company record for number of demos booked in a day (5), week (6), month (18), an
 	
 	<div>
 		<h3><a href="https://www.macalester.edu/employmentservices/studentemployment/" target="_blank"><img class="mac-logo" src="https://athletics.macalester.edu/images/2021/1/4/shield_blue_headshot.jpg"/></a>Student Employment, Macalester College</h3>
-		<h5>Interim Program Coordinator</h5>
-		<h6>October 2018 - January 2019</h6>
+		<h4>Interim Program Coordinator</h4>
+		<h5>October 2018 - January 2019</h5>
 		<p class="tidbit">Employing nearly 1,600 students, Macalester's Student Employment Program exists to provide employment opportunities that offer students both financial assistance and professional development.</p>
 		<ul>
 			<li>Hired after graduation as a full-time staff member to temporarily lead day-to-day operations of a $3M budget Student Employment program</li>
@@ -67,8 +67,8 @@ Company record for number of demos booked in a day (5), week (6), month (18), an
 	<div>
 		<h3><a href="https://www.macalester.edu/employmentservices/" target="_blank"><img class="mac-logo" src="https://athletics.macalester.edu/images/2021/1/4/shield_blue_headshot.jpg"/></a>Employment Services, Macalester College</h3>
 		<h4>HR Office Assistant</h5>
-		<h5>June 2017 - May 2018</h6>
-		<p>Employment Services is committed to attracting, selecting, retaining and developing a diverse and inclusive workforce that maintains the high standards of the College.</p>
+		<h5>June 2017 - May 2018</h5>
+		<p class="tidbit">Employment Services is committed to attracting, selecting, retaining and developing a diverse and inclusive workforce that maintains the high standards of the College.</p>
 		<ul>
 			<li>Executed an internal audit of roughly 3,000 Form I-9's, monitored student employment awards, and implemented student employee status changes</li>
 			<li>Supported the Student Employment Program, creating Standard Operating Procedure documents to support internal processes</li>
@@ -82,8 +82,8 @@ Company record for number of demos booked in a day (5), week (6), month (18), an
   
   <div>
 		<h3><a href="https://www.macalester.edu/" target="_blank"><img class="mac-logo" src="https://athletics.macalester.edu/images/2021/1/4/shield_blue_headshot.jpg"/></a>Macalester College</h3>
-    <h4>Bachelor of Arts in Neuroscience Studies (Psychology Emphasis)</h5>
-    <h5>September 2014 - May 2018</h6> 
+    <h4>Bachelor of Arts in Neuroscience Studies (Psychology Emphasis)</h4>
+    <h5>September 2014 - May 2018</h5> 
 		<p class="tidbit">Macalester College is a top ranked liberal arts college located in St. Paul, MN. With special emphasis on internationalism, multiculturalism, and service to society, a Macalester education prepares students to thrive in a globally connected world.</p>
 		<ul>
 			<li>Independently researched how the use of environmental and social enrichment affected the impaired memory of rats in order to investigate possible treatment for Alzheimer’s Disease</li>
