--- a/index.html
+++ b/index.html
@@ -10,21 +10,32 @@
 <body>
   
   <div class="info-block">
+		<img class="headshot" src="https://media-exp1.licdn.com/dms/image/C4E03AQEuQK05f8Vt6g/profile-displayphoto-shrink_400_400/0/1626811828200?e=1648080000&v=beta&t=J_Qg85lsKlGLg2LvblC0iinq1peBmfGSPMyohTHmcRY"/>
 		<h1>Pete Hall</h1>
-		<p>pete.mack.hall@gmail.com</p>
-    <p>815-978-0519</p>
+		<p class="contact">pete.mack.hall@gmail.com</p>
+    <p class="contact">815-978-0519</p>
 	</div>
+	
+<!--Experience section-->
 	
   <div class ="exp-header">
     <h2>Experience</h2>
   </div>
-  
-  <div>
-    <h3><a href="https://www.betteryou.ai/" target="_blank"><img class="betteryou-logo" src="https://media-exp1.licdn.com/dms/image/C560BAQGCkbFyFWzTcA/company-logo_200_200/0/1545163963799?e=2159024400&v=beta&t=gNFcMIVXlJXhzKxJymGG-ym2ypBZAaGgGO54QJeFXkg" /></a>BetterYou, St. Paul, MN</h3>
-    <h4>Business Development Representative</h4>
-    <h5>May 2021 - Present</h5>
-    <p class="tidbit">BetterYou is an app backed by behavior design that helps people find more time in the day for their health. Through the use of logging progress automatically and providing tailored nudges, users can mindfully spend time achieving a variety of wellness goals.</p>
-    <ul>
+
+<!-- BetterYou -->
+	
+	<div class="flex-container">
+		<h3 class="flex-item"><a href="https://www.betteryou.ai/" target="_blank"><img class="betteryou-logo" src="https://media-exp1.licdn.com/dms/image/C560BAQGCkbFyFWzTcA/company-logo_200_200/0/1545163963799?e=2159024400&v=beta&t=gNFcMIVXlJXhzKxJymGG-ym2ypBZAaGgGO54QJeFXkg" /></a>BetterYou</h3>
+		<h5 class="flex-item-right">St. Paul, MN</h5>
+	</div>
+	<div class="flex-container">
+		<h4 class = "flex-item">Business Development Representative</h4>
+		<h5 class="flex-item-right">May 2021 - Present</h5>
+	</div>
+	
+	<div>
+		<p class="tidbit">BetterYou is an app backed by behavior design that helps people find more time in the day for their health. Through the use of logging progress automatically and providing tailored nudges, users can mindfully spend time achieving a variety of wellness goals.</p>
+		<ul>
       <li>Hired as employee #11 during the close of the company’s $2.25 million venture-lead seed round</li>
       <li>Generate leads, perform and experiment with outbound sales campaigns to Higher Education institutions and Mid-Market to Enterprise level organizations</li>
       <li>The #1 top performing BDR (out of 7) at the company with 63 total demos booked, accounting for 36% of the total number of demos booked as a team since starting
@@ -33,12 +44,20 @@ Company record for number of demos booked in a day (5), week (6), month (18), an
 			<li>Achieving a 34% open rate on email outreach resulting in 55% of personal demos booked</li>
 			<li>Booked demos and started relationships at places like Walmart, Aon, Gallagher, Carvana, McKinsey Company, Syracuse University, and Texas A&amp;M</li>
     </ul>
-  </div>
-  
-  <div>
-    <h3><a href="https://www.macalester.edu/entrepreneurship-and-innovation/" target="_blank"><img class="mac-logo" src="https://athletics.macalester.edu/images/2021/1/4/shield_blue_headshot.jpg"/></a>Department of Entrepreneurship &amp; Innovation, Macalester College</h3>
-    <h4>Administrative Coordinator</h4>
-    <h5>January 2019 - April 2021</h5>
+	</div>
+	
+<!-- E&I, Macalester -->
+	
+	<div class="flex-container">
+		<h3 class="flex-item"><a href="https://www.macalester.edu/entrepreneurship-and-innovation/" target="_blank"><img class="mac-logo" src="https://athletics.macalester.edu/images/2021/1/4/shield_blue_headshot.jpg"/></a>Department of Entrepreneurship &amp; Innovation, Macalester College</h3>
+		<h5 class="flex-item-right">St. Paul, MN</h5>
+	</div>
+	<div class="flex-container">
+		<h4 class="flex-item">Administrative Coordinator</h4>
+		<h5 class="flex-item-right">January 2019 - April 2021</h5>
+	</div>
+	
+	<div>
 		<p class="tidbit">Entrepreneurship at Macalester works with students and the broader Macalester community to nurture ideas and fuel innovation to bring about change.</p>
     <ul>
       <li>Coordinated the logistics for all aspects of 3 yearly cohort-based programs and 3 yearly funds - including promotions, info sessions, applications, selection process, program acceptance, on-boarding, programming, surveys, and program wrap-up</li>
@@ -48,12 +67,20 @@ Company record for number of demos booked in a day (5), week (6), month (18), an
 			<li>Regularly updated website content with WordPress and HTML</li>
 			<li>Managed and reconciled budgets</li>
     </ul>
-  </div>
+	</div>
+	
+<!-- Student Employment, Macalester -->
+	
+	<div class="flex-container">
+		<h3 class="flex-item"><a href="https://www.macalester.edu/employmentservices/studentemployment/" target="_blank"><img class="mac-logo" src="https://athletics.macalester.edu/images/2021/1/4/shield_blue_headshot.jpg"/></a>Student Employment, Macalester College</h3>
+		<h5 class="flex-item-right">St. Paul, MN</h5>
+	</div>
+	<div class="flex-container">
+		<h4 class="flex-item">Interim Program Coordinator</h4>
+		<h5 class="flex-item-right">October 2018 - January 2019</h5>
+	</div>
 	
 	<div>
-		<h3><a href="https://www.macalester.edu/employmentservices/studentemployment/" target="_blank"><img class="mac-logo" src="https://athletics.macalester.edu/images/2021/1/4/shield_blue_headshot.jpg"/></a>Student Employment, Macalester College</h3>
-		<h4>Interim Program Coordinator</h4>
-		<h5>October 2018 - January 2019</h5>
 		<p class="tidbit">Employing nearly 1,600 students, Macalester's Student Employment Program exists to provide employment opportunities that offer students both financial assistance and professional development.</p>
 		<ul>
 			<li>Hired after graduation as a full-time staff member to temporarily lead day-to-day operations of a $3M budget Student Employment program</li>
@@ -64,10 +91,18 @@ Company record for number of demos booked in a day (5), week (6), month (18), an
 		</ul>
 	</div>
 	
+<!-- Office Asst, Macalester -->
+	
+	<div class="flex-container">
+		<h3 class="flex-item"><a href="https://www.macalester.edu/employmentservices/studentemployment/" target="_blank"><img class="mac-logo" src="https://athletics.macalester.edu/images/2021/1/4/shield_blue_headshot.jpg"/></a>Employment Services, Macalester College</h3>
+		<h5 class="flex-item-right">St. Paul, MN</h5>
+	</div>
+	<div class="flex-container">
+		<h4 class="flex-item">HR Office Assistant</h4>
+		<h5 class="flex-item-right">June 2017 - May 2018</h5>
+	</div>
+	
 	<div>
-		<h3><a href="https://www.macalester.edu/employmentservices/" target="_blank"><img class="mac-logo" src="https://athletics.macalester.edu/images/2021/1/4/shield_blue_headshot.jpg"/></a>Employment Services, Macalester College</h3>
-		<h4>HR Office Assistant</h5>
-		<h5>June 2017 - May 2018</h5>
 		<p class="tidbit">Employment Services is committed to attracting, selecting, retaining and developing a diverse and inclusive workforce that maintains the high standards of the College.</p>
 		<ul>
 			<li>Executed an internal audit of roughly 3,000 Form I-9's, monitored student employment awards, and implemented student employee status changes</li>
@@ -75,15 +110,25 @@ Company record for number of demos booked in a day (5), week (6), month (18), an
 			<li>Completed tasks and projects for a variety of areas in HR including benefits, compensation, HRIS, and talent acquisition.</li>
 		</ul>
 	</div>
-  
-  <div class="exp-header">
+
+<!--Education section-->
+	
+	<div class="exp-header">
     <h2>Education</h2>
   </div>
-  
-  <div>
-		<h3><a href="https://www.macalester.edu/" target="_blank"><img class="mac-logo" src="https://athletics.macalester.edu/images/2021/1/4/shield_blue_headshot.jpg"/></a>Macalester College</h3>
-    <h4>Bachelor of Arts in Neuroscience Studies (Psychology Emphasis)</h4>
-    <h5>September 2014 - May 2018</h5> 
+	
+<!-- Education, Macalester -->
+	
+	<div class="flex-container">
+		<h3 class="flex-item"><a href="https://www.macalester.edu/" target="_blank"><img class="mac-logo" src="https://athletics.macalester.edu/images/2021/1/4/shield_blue_headshot.jpg"/></a>Macalester College</h3>
+		<h5 class="flex-item-right">St. Paul, MN</h5>
+	</div>
+	<div class="flex-container">
+		<h4 class="flex-item">Bachelor of Arts in Neuroscience Studies (Psychology Emphasis)</h4>
+		<h5 class="flex-item-right">3.47 GPA | September 2014 - May 2018</h5>
+	</div>
+	
+	<div>
 		<p class="tidbit">Macalester College is a top ranked liberal arts college located in St. Paul, MN. With special emphasis on internationalism, multiculturalism, and service to society, a Macalester education prepares students to thrive in a globally connected world.</p>
 		<ul>
 			<li>Independently researched how the use of environmental and social enrichment affected the impaired memory of rats in order to investigate possible treatment for Alzheimer’s Disease</li>
@@ -91,7 +136,7 @@ Company record for number of demos booked in a day (5), week (6), month (18), an
 			<li>WMCN 91.7 Radio DJ</li>
 			<li>Relevant coursework: Core Concepts in Computer Science, Introduction to Statistics, Introduction to Artificial Intelligence, Introduction to Entrepreneurship</li>
 		</ul>
-  </div>
-
+	</div>
+	
 </body>
 </html>
