--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Pete Hall Resume</title>
+	<link rel="icon" href="https://cdn.cbeditz.com/cbeditz/preview/timber-gradient-wallpaper-background-hd-11624180650f902neferj.png"/>
   <link rel="stylesheet" href="style.css" />
 </head>
   
