--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   
   <div class="info-block">
-		<img class="headshot" src="https://media-exp1.licdn.com/dms/image/C4E03AQEuQK05f8Vt6g/profile-displayphoto-shrink_400_400/0/1626811828200?e=1648080000&v=beta&t=J_Qg85lsKlGLg2LvblC0iinq1peBmfGSPMyohTHmcRY"/>
+		<a href="https://www.linkedin.com/in/pete-hall-0894a5132/" target="_blank"><img class="headshot" src="https://media-exp1.licdn.com/dms/image/C4E03AQEuQK05f8Vt6g/profile-displayphoto-shrink_400_400/0/1626811828200?e=1648080000&v=beta&t=J_Qg85lsKlGLg2LvblC0iinq1peBmfGSPMyohTHmcRY"/></a>
 		<h1>Pete Hall</h1>
 		<p class="contact">pete.mack.hall@gmail.com</p>
     <p class="contact">815-978-0519</p>
