--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ Company record for number of demos booked in a day (5), week (6), month (18), an
       <li>Lead event planning and logistics for E&I events, marquee "hackathon", and Idea Showcase</li>
       <li>Maintained and analyzed program data, implemented process improvements, and worked with confidential information</li>
 			<li>Supervised 20 student employees and assisted in Maker Space programming</li>
-			<li>Regularly updated website content with WordPress and HTML</li>
+			<li>Regularly updated website content with WordPress</li>
 			<li>Managed and reconciled budgets</li>
     </ul>
 	</div>
