--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <li>Generate leads, perform and experiment with outbound sales campaigns to Higher Education institutions and Mid-Market to Enterprise level organizations</li>
       <li>The #1 top performing BDR (out of 7) at the company with 63 total demos booked, accounting for 36% of the total number of demos booked as a team since starting</li>
 			<li>Company record for number of demos booked in a day (5), week (6), month (18), and quarter (32)</li>
-			<li>Completed a total of 5,130 dials with an 8% connect rate resulting in 45% of personal demos booked</li>
+			<li>Completed a total of over 5,130 dials with an 8% connect rate resulting in 45% of personal demos booked</li>
 			<li>Achieving a 34% open rate on email outreach resulting in 55% of personal demos booked</li>
 			<li>Booked demos and started relationships at places like Walmart, Aon, Gallagher, Carvana, McKinsey Company, Syracuse University, and Texas A&amp;M</li>
     </ul>
