--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 <!-- Office Asst, Macalester -->
 	
 	<div class="flex-container">
-		<h3 class="flex-item"><a href="https://www.macalester.edu/employmentservices/studentemployment/" target="_blank"><img class="mac-logo" src="https://athletics.macalester.edu/images/2021/1/4/shield_blue_headshot.jpg"/></a>Employment Services, Macalester College</h3>
+		<h3 class="flex-item"><a href="https://www.macalester.edu/employmentservices/" target="_blank"><img class="mac-logo" src="https://athletics.macalester.edu/images/2021/1/4/shield_blue_headshot.jpg"/></a>Employment Services, Macalester College</h3>
 		<h5 class="flex-item-right">St. Paul, MN</h5>
 	</div>
 	<div class="flex-container">
